[package]
name = "cargo-dtc"
version = "1.7.6"
edition = "2021"
license = "GPL-2.0-or-later"
description = "Devicetree Compiler packaged for building with cargo"
authors = ["Sean Cross"]
repository = "https://github.com/xobs/cargo-dtc"

[[bin]]
bench = false
path = "src/dtc.rs"
name = "cargo-dtc"

[dependencies]

[build-dependencies]
cc = "1.0"
